--- a/apps/host/src/styles.less
+++ b/apps/host/src/styles.less
@@ -1,3 +1,6 @@
+//@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 // Custom Theming for NG-ZORRO
 // For more information: https://ng.ant.design/docs/customize-theme/en
