--- a/libs/shell/feature/layout/src/lib/layout.component.html
+++ b/libs/shell/feature/layout/src/lib/layout.component.html
@@ -1,1 +1,48 @@
-<p>layout works!</p>
+<nz-layout class="layout">
+  <nz-sider>
+    <div class="logo"></div>
+    <ul nz-menu nzTheme="dark" nzMode="inline">
+      <li nz-menu-item>
+        <span nz-icon nzType="file"></span>
+        <span>nav 1</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="video-camera"></span>
+        <span>nav 2</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="upload"></span>
+        <span>nav 3</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="bar-chart"></span>
+        <span>nav 4</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="cloud-o"></span>
+        <span>nav 5</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="appstore-o"></span>
+        <span>nav 6</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="team"></span>
+        <span>nav 7</span>
+      </li>
+      <li nz-menu-item>
+        <span nz-icon nzType="shop"></span>
+        <span>nav 8</span>
+      </li>
+    </ul>
+  </nz-sider>
+  <nz-layout class="right-layout">
+    <nz-header></nz-header>
+    <nz-content>
+      <div class="inner-content">
+        <router-outlet />
+      </div>
+    </nz-content>
+    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+  </nz-layout>
+</nz-layout>
